<resources>
    <string name="app_name">HungryGuys</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- 애러 방지-->
    <string name="default_web_client_id">default_web_client_id</string>

    <string name="login_title">점심이 고민될땐? HungryGuys!</string>
    <string name="login_google">구글로 시작하기</string>

    <string name="home_search_hint">맛집을 검색하세요!</string>

    <string name="title_searchparty">밥 친구 구하는 중</string>
    <string name="title_info_restaurant">식당 정보</string>

    <string name="menu_home">홈</string>
    <string name="menu_searchparty">파티 찾기</string>
    <string name="menu_searchrestaurant">식당 찾기</string>
    <string name="menu_mypage">마이</string>
    <string name="menu_settings">설정</string>

    <string name="mypage_user_name">닉네임</string>
    <string name="mypage_user_location">그룹</string>
    <string name="mypage_chatlist_description">내 채팅방</string>
    <string name="mypage_logout_text">로그아웃</string>
    <string name="mypage_logout_check">로그아웃 하시겠습니까?</string>
    <string name="mypage_cancel_text">회원탈퇴</string>
    <string name="mypage_cancel_check">회원탈퇴 하시겠습니까?</string>
    <string name="mypage_dialog_ok">확인</string>
    <string name="mypage_dialog_cencal">취소</string>
    <string name="mypage_nonechat_text">현재 참여중인 채팅방이 없습니다.</string>

    <string name="settings_messages_header">기본설정</string>
    <string name="settings_notification">알림</string>
    <string name="settings_notification_off">알림을 활성화 합니다.</string>
    <string name="settings_notification_on">알림을 비활성화 합니다.</string>
    <string name="settings_darkmode">다크모드</string>
    <string name="settings_darkmode_off">다크모드를 활성화 합니다.</string>
    <string name="settings_darkmode_on">다크모드를 비활성화 합니다.</string>

    <string name="info_restaurant_addparty">파티 생성</string>
    <string name="info_restaurant_addparty_info">파티 제목을 입력해주세요! (10자 이내)</string>
    <string name="info_restaurant_addparty_ok">생성</string>
    <string name="info_restaurant_addparty_cencal">취소</string>

    <string name="info_restaurant_addreveiw">리뷰 작성</string>
    <string name="info_restaurant_addreveiw_info">리뷰를 작성해주세요! (80자 이내)</string>
    <string name="info_restaurant_addreveiw_ok">작성</string>
    <string name="info_restaurant_addreveiw_cencal">취소</string>
    <string name="chatting_push">채팅을 입력하세요!</string>

    <string name="chatting_user_info">밥 먹을 사람</string>
</resources>