<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_searchparty"
            android:icon="@drawable/search_party"
            android:title="@string/menu_searchparty" />
        <item
            android:id="@+id/nav_searchrestaurant"
            android:icon="@drawable/restaurant_icon"
            android:title="@string/menu_searchrestaurant" />
        <item
            android:id="@+id/nav_mypage"
            android:icon="@drawable/user_icon"
            android:title="@string/menu_mypage" />
    </group>
</menu>