<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dialog_shape"
    android:padding="10dp"
    android:theme="@style/Theme.HungryGuys.NoActionBar">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addparty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mypage_cancel_text"
            android:textColor="@color/hint_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mypage_cancel_check"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/pink"
                android:stateListAnimator="@null"
                android:text="@string/mypage_dialog_ok"
                android:textColor="@color/background" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_cencel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/hint_color"
                android:stateListAnimator="@null"
                android:text="@string/mypage_dialog_cencal"
                android:textColor="@color/background" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>