<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dialog_shape"
    android:padding="10dp"
    android:theme="@style/Theme.HungryGuys.NoActionBar">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addparty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/info_restaurant_addreveiw"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/star_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grade_star_icon" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grade_disablestar_icon" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grade_disablestar_icon" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grade_disablestar_icon" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grade_disablestar_icon" />
        </LinearLayout>

        <EditText
            android:id="@+id/input_addreveiw"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="name"
            android:background="@drawable/item_dialog_edittext_shape"
            android:gravity="start"
            android:hint="@string/info_restaurant_addreveiw_info"
            android:inputType="textMultiLine"
            android:maxLength="80"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp"
            android:scrollHorizontally="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/pink"
                android:stateListAnimator="@null"
                android:text="@string/info_restaurant_addreveiw_ok"
                android:textColor="@color/background" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_cencel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/hint_color"
                android:stateListAnimator="@null"
                android:text="@string/info_restaurant_addreveiw_cencal"
                android:textColor="@color/background" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>