<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mypage.MypageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:id="@+id/user_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/mypage_user_icon" />

            <LinearLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/item_shape"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:theme="@style/Theme.HungryGuys.NoActionBar">

                <TextView
                    android:id="@+id/user_name_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/mypage_user_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:paddingEnd="5dp"
                    android:text="닉네임"
                    android:textAlignment="textEnd"
                    android:textColor="@color/hint_color"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/user_name_arrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="right_arrow"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_location_layout"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_shape"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:theme="@style/Theme.HungryGuys.NoActionBar">

                <TextView
                    android:id="@+id/user_location_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/mypage_user_location"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:paddingEnd="5dp"
                    android:text="주소"
                    android:textAlignment="textEnd"
                    android:textColor="@color/hint_color"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/user_location_arrow"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="right_arrow"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_chatlist_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/Theme.HungryGuys.NoActionBar">

                <TextView
                    android:id="@+id/chat_list_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_chatlist_description"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/none_chat_text"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="200dp"
                    android:text="@string/mypage_nonechat_text"
                    android:textColor="@color/hint_color"
                    android:visibility="gone"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/my_chat_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layoutManager="LinearLayoutManager" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:orientation="horizontal"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/logout_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_logout_text"
                    android:textColor="@color/hint_color" />

                <TextView
                    android:id="@+id/bottom_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="|"
                    android:textColor="@color/hint_color" />

                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_cancel_text"
                    android:textColor="@color/hint_color" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
